--- a/perprof_web/templates/solvers.html
+++ b/perprof_web/templates/solvers.html
@@ -67,21 +67,21 @@ In this page you can upload solvers and see the performance profile.
         </div>
 
         <div class="field">
-          <button class="button is-info is-fullwidth" type="submit" name="action" value="edit"  id="edit-solver{{ loop.index0 }}>
-            <span class="icon">
-              <i class="fas fa-edit""></i>
+          <button class="button is-info is-fullwidth" type="submit" name="action" value="edit" id="edit-solver{{ loop.index0 }}>
+            <span class=" icon">
+            <i class="fas fa-edit""></i>
             </span>
             <span>update name</span>
           </button>
         </div>
 
-        <div class="field">
-          <button class="button is-danger is-fullwidth" type="submit" name="action" value="delete">
-            <span class="icon">
-              <i class="fas fa-trash"></i>
-            </span>
-            <span>delete</span>
-          </button>
+        <div class=" field">
+              <button class="button is-danger is-fullwidth" type="submit" name="action" value="delete">
+                <span class="icon">
+                  <i class="fas fa-trash"></i>
+                </span>
+                <span>delete</span>
+              </button>
         </div>
 
       </div>
@@ -92,7 +92,52 @@ In this page you can upload solvers and see the performance profile.
 
 {% if (solvers | length) > 1 %}
 <h2 class="is-size-4">Performance profile</h2>
-<img src="data:image/png;base64,{{ plot_data }}" />
+
+<div class="columns">
+
+  <div class="column">
+    <img src="data:image/png;base64,{{ plot_data }}" />
+  </div>
+
+  <div class="column">
+    <div class="box">
+      <div class="form">
+        <div class="field">
+          <label class="label">Title:</label>
+          <input class="input" placeholder="title" type="text" name="title" value="">
+        </div>
+
+        <div class="field">
+          <label class="label">x-label:</label>
+          <input class="input" placeholder="x-label" type="text" name="xlabel" value="">
+        </div>
+
+        <div class="field">
+          <label class="label">y-label:</label>
+          <input class="input" placeholder="y-label" type="text" name="ylabel" value="">
+        </div>
+
+        <div class="field">
+          <button class="button is-primary" type="submit" name="update" value="update">
+            <span class="icon">
+              <i class="fas fa-sync"></i>
+            </span>
+            <span>update</span>
+          </button>
+
+          <a class="button is-primary" href="data:image/png;base64,{{ plot_data }}" download="perprof.png">
+            <span class="icon">
+              <i class="fas fa-download"></i>
+            </span>
+            <span>Download</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
 {% endif %}
 
 {% else %}
@@ -101,13 +146,13 @@ In this page you can upload solvers and see the performance profile.
 
 
 <script>
-const fileInput = document.querySelector('#file-upload input[type=file]');
-fileInput.onchange = () => {
-  if (fileInput.files.length > 0) {
-    const fileName = document.querySelector('#file-upload .file-name');
-    fileName.textContent = fileInput.files[0].name;
+  const fileInput = document.querySelector('#file-upload input[type=file]');
+  fileInput.onchange = () => {
+    if (fileInput.files.length > 0) {
+      const fileName = document.querySelector('#file-upload .file-name');
+      fileName.textContent = fileInput.files[0].name;
+    }
   }
-}
 </script>
 
 {% endblock %}
